--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to testing</h1>
-    <h2>Naja</h2>
+    <!-- <h1>Welcome to testing</h1> -->
+    <h2>Frontend Developmen</h2>
 </body>
 </html>
