--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </ul>
                 </div>
             </nav>
-            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 fade-in">
                 <h1 class="mt-4">Dashboard</h1>
                 <div class="row my-3">
                     <div class="col-lg-3 col-md-6 mb-3">
@@ -61,10 +61,46 @@
                         </div>
                     </div>
                 </div>
+                <canvas id="productChart" class="mb-4"></canvas>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Products</h2>
+                        <table class="table" id="productTable">
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Price</th>
+                                    <th>Quantity</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody></tbody>
+                        </table>
+                        <h3 id="formTitle">Add Product</h3>
+                        <form id="productForm">
+                            <input type="hidden" id="productId">
+                            <div class="mb-3">
+                                <label class="form-label">Name</label>
+                                <input type="text" id="name" class="form-control" required>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label">Price</label>
+                                <input type="number" id="price" class="form-control" step="0.01" required>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label">Quantity</label>
+                                <input type="number" id="quantity" class="form-control" required>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Save</button>
+                            <button type="button" id="cancelEdit" class="btn btn-secondary d-none">Cancel</button>
+                        </form>
+                    </div>
+                </div>
             </main>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
